<resources>
    <string name="app_name">FilmHolic</string>
    <string name="logo">logo</string>
    <string name="filmholic">FilmHolic</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="display_movies2">Display Movies</string>
    <string name="favourites">Favourites</string>
    <string name="done">done</string>
    <string name="register_movie">Register Movie</string>
    <string name="logoinmain">logoinmain</string>
    <string name="title_of_the_movie">Title of the Movie</string>
    <string name="the_year">The Year</string>
    <string name="the_director">The Director</string>
    <string name="names_of_actors_actresses">Names of Actors/Actresses</string>
    <string name="rating">Rating (1-10)</string>
    <string name="review">Review</string>
    <string name="logoregister">logoregister</string>
    <string name="submit">Save</string>
    <string name="fill_these_fileds">Register Movies</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="logodisplay">logodisplay</string>
    <string name="button">Button</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="display_movies">Display Movies</string>
    <string name="favouries">Favouries</string>
    <string name="save">SAVE</string>
    <string name="movie_name">Movie Name</string>
    <string name="director">Director</string>
    <string name="actors_actresses">Actors/Actresses</string>
    <string name="rating2">Rating</string>
    <string name="review2">Review</string>
    <string name="favourite">Favourite</string>
    <string name="movie_year2">Movie Year</string>
    <string name="update">update</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="search_here">Search Here</string>
    <string name="lookup">Lookup</string>
    <string name="find_movie_in_imdb">Find Movie in IMDB</string>
</resources>