<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/RegisterNameBtn"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logobtn"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center|left"
        android:text="@string/register_movie"
        android:textColor="#121111"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#100F0F"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <Button
        android:id="@+id/FavouriteBtn"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logobtn"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center|left"
        android:text="@string/favourites"
        android:textColor="#121111"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#100F0F"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMovieBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/displayMovieBtn"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logobtn"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center|left"
        android:text="@string/display_movies"
        android:textColor="#121111"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#171616"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterNameBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/RatingsBtn"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logobtn"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center|left"
        android:text="@string/ratings"
        android:textColor="#121111"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#100F0F"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/EditMoviesBtn"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logobtn"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center|left"
        android:text="@string/edit_movies"
        android:textColor="#121111"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#100F0F"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FavouriteBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SearchBtn"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/logobtn"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center|left"
        android:text="@string/search"
        android:textColor="#121111"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#100F0F"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditMoviesBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoinMain"
        android:layout_width="193dp"
        android:layout_height="128dp"
        android:contentDescription="@string/logoinmain"
        app:layout_constraintBottom_toTopOf="@+id/RegisterNameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logofh" />

    <TextView
        android:id="@+id/textViewAppNameDislay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/almendra_display"
        android:gravity="center"
        android:text="@string/filmholic"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/RegisterNameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoinMain"
        app:layout_constraintVertical_bias="0.82" />
</androidx.constraintlayout.widget.ConstraintLayout>