<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cutom_layout"
    tools:context=".RegisterMovieActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextMovieName"
            android:layout_width="365dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/cutom_edittesxt"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:hint="@string/title_of_the_movie"
            android:inputType="textPersonName"
            android:textColor="#FDFCFC"
            android:textColorHint="#4D5656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172" />

        <EditText
            android:id="@+id/editTextYear"
            android:layout_width="365dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/cutom_edittesxt"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:hint="@string/the_year"
            android:inputType="textPersonName"
            android:textColor="#FDFCFC"
            android:textColorHint="#4D5656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMovieName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextDirectorName"
            android:layout_width="365dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/cutom_edittesxt"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:hint="@string/the_director"
            android:inputType="textPersonName"
            android:textColor="#FDFCFC"
            android:textColorHint="#4D5656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextYear"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTeaxtListOfNames"
            android:layout_width="365dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/cutom_edittesxt"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:hint="@string/names_of_actors_actresses"
            android:inputType="textPersonName"
            android:textColor="#FDFCFC"
            android:textColorHint="#4D5656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDirectorName"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTeastRating"
            android:layout_width="365dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/cutom_edittesxt"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:hint="@string/rating"
            android:inputType="textPersonName"
            android:textColor="#FDFCFC"
            android:textColorHint="#4D5656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTeaxtListOfNames"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/editTextReview"
            android:layout_width="365dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints=""
            android:background="@drawable/cutom_edittesxt"
            android:ems="10"
            android:fontFamily="@font/artifika"
            android:gravity="center"
            android:hint="@string/review"
            android:inputType="textPersonName"
            android:textColor="#FDFCFC"
            android:textColorHint="#4D5656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTeastRating"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/submitRegisterBtn"
            android:layout_width="258dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/logobtn"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#121111"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:backgroundTint="#100F0F"
            app:backgroundTintMode="add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextReview"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/logoRegister"
            android:layout_width="121dp"
            android:layout_height="99dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logoregister"
            app:layout_constraintBottom_toTopOf="@+id/editTextMovieName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logofh" />

        <TextView
            android:id="@+id/textViewNameRegister"
            android:layout_width="110dp"
            android:layout_height="26dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/almendra_display"
            android:gravity="center"
            android:text="@string/filmholic"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/editTextMovieName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/TextViewtoRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abel"
            android:gravity="center|left"
            android:text="@string/fill_these_fileds"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/editTextMovieName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.738" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>